add gitignore and made changes to code

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ uvicorn[standard]
 mysql-connector-python
 pydantic
 psycopg2-binary
-
+python-dotenv
 fastapi
 uvicorn[standard]
-mysql-connector-python
 pydantic
 psycopg2-binary
+python-dotenv
